dchart-progressbar-widget: overflow fixed

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,2 +1,6 @@
 /*generic stylesheet*/
 *{margin: 0;padding: 0;}
+body{font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;color: #666;font-size: 14px;}
+
+.wrapper{margin: 0 10px;}
+.form_generic{padding: 10px 10px 19px;border-bottom: 1px solid  #ddd;margin-bottom: 20px;}
